# BTCMobickWatch

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  BUILD.ko.md  BUILD.md  Dockerfile  LICENSE  README.ko.md  README.md  SECURITY.ko.md  SECURITY.md
.github/: FUNDING.yml
app/: App.tsx  app.json  direct-licenses.json  index.js  licenses.json  package-lock.json  package.json
app/android/: keystore.properties.example  settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/btcmobickwatchapp/: MainActivity.kt  MainApplication.kt
app/android/app/src/main/java/com/btcmobickwatchapp/auth/: DeviceAuthModule.kt  DeviceAuthPackage.kt
app/android/app/src/main/java/com/btcmobickwatchapp/integrity/: IntegrityModule.kt  IntegrityPackage.kt
app/android/app/src/main/java/com/btcmobickwatchapp/wallet/: WalletCoreModule.kt  WalletCorePackage.kt  WalletRegistry.kt
app/android/app/src/main/java/uniffi/wallet_core/: wallet_core.kt
app/android/app/src/main/res/values/: strings.xml
app/ios/: Podfile
app/ios/BTCMobickWatchApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
app/ios/BTCMobickWatchApp.xcodeproj/: project.pbxproj
app/ios/BTCMobickWatchApp.xcodeproj/xcshareddata/xcschemes/: BTCMobickWatchApp.xcscheme
app/src/components/: Screen.tsx  icons.tsx  modals.tsx
app/src/constants/: assets.ts  networks.ts  services.ts  theme.ts
app/src/context/: LanguageContext.tsx
app/src/evm/: airgap.ts
app/src/locales/: en.ts  index.ts  ja.ts  ko.ts  zh.ts
app/src/native/: WalletCore.ts
app/src/styles/: index.ts
app/src/types/: index.ts
app/src/utils/: helpers.ts  storage.ts
rust-core/: Cargo.toml  rust-toolchain.toml
rust-core/crates/core-btc/: Cargo.toml
rust-core/crates/core-btc/certs/: ltm_electrum.pem  mobick_electrum.pem
rust-core/crates/core-btc/src/: batch_scan.rs  broadcast.rs  error.rs  lib.rs  psbt.rs  scanner.rs  wallet.rs  zpub.rs
rust-core/crates/core-btc/tests/: address_parity.rs  electrum_live.rs  scan_does_not_block_reads.rs
rust-core/crates/core-evm/: Cargo.toml
rust-core/crates/core-evm/src/: balance.rs  error.rs  lib.rs
rust-core/crates/ffi/: Cargo.toml
rust-core/crates/ffi/src/: btc_api.rs  evm_api.rs  lib.rs  wallet_core.udl
rust-core/scripts/: build_android.sh
rust-core/tools/uniffi-bindgen/: Cargo.toml
scripts/: verify-reproducible.sh
